FEAT #002 * home page styles * star wars font * minecraft font

--- a/src/vars.css
+++ b/src/vars.css
@@ -1,6 +1,6 @@
 :root{
     --text-color: #f0f0f0;
-    --text-color-soft: #ccc;
+    --text-color-soft: #bbb;
     --bg-color: #161618;
     --card-border: 1px solid #333;
 }
