--- a/src/styles.css
+++ b/src/styles.css
@@ -4,21 +4,45 @@
     box-sizing: border-box;
     text-decoration: none;
 }
+@font-face {
+    font-family: Minecraft;
+    src: url('../public/font/minecraft/Minecraft.ttf') format('truetype');
+}
 body{
     width: 100%;
     height: 100vh;
     color: var(--text-color);
     background: var(--bg-color);
-    font-family: Cambria;
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: Minecraft;
+    letter-spacing: 2px;
 }
 main{
     width: 100%;
     max-width: 1180px;
     min-height: 100%;
     padding: 20px;
+}
+#heading{
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+    grid-template-areas: "img h1" "img p";
+    column-gap: .5rem;
+}
+#heading img{
+    grid-area: img;
+    height: 50px;
+    aspect-ratio: 1 / 1;
+    user-select: none;
+}
+#heading h1{
+    grid-area: h1;
+}
+p{
+    grid-area: p;
+    color: var(--text-color-soft);
 }
 section#game-list{
     display: grid;
@@ -34,7 +58,6 @@ article{
     align-items: end;
     justify-content: space-between;
     border: var(--card-border);
-    border-radius: 5px;
     padding: 20px;
 }
 article img{
@@ -47,7 +70,6 @@ article img.portrait{
     width: 100%;
     height: 10rem;
     object-fit: cover;
-    border-radius: 5px;
     mask-image: linear-gradient(to bottom, black 40%, transparent);
 }
 article *:not(.portrait){
@@ -55,16 +77,28 @@ article *:not(.portrait){
 }
 article h3{
     width: fit-content;
-    font-size: 1.25rem;
 }
 article a{
     display: flex;
     gap: .25rem;
-    align-items: center;
+    align-items: start;
     color: var(--text-color-soft);
+    border: 2px solid var(--text-color-soft);
+    padding: 4px 6px 0 6px;
+    box-shadow: 2px 2px var(--text-color-soft);
+    letter-spacing: 1px;
+    user-select: none;
+}
+article a:hover{
+    transform: translateY(-2px);
+    box-shadow: 2px 4px var(--text-color-soft);
+}
+article a:active{
+    transform: translateY(0);
+    box-shadow: 2px 2px var(--text-color-soft);
 }
 article a img{
-    width: 1rem;
-    height: 1rem;
-    filter: invert(1);
+    width: .75rem;
+    height: .75rem;
+    filter: invert(.69);
 }
